# Data-Science-and-Petroleum-Reservoir-Classification

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
results/advanced_analysis/: advanced_results.json
results/eda/: eda_results.json  eda_summary.json
results/report/: analysis_report.html
src/: __init__.py  main.py
src/analysis/: __init__.py  advanced_analysis.py  eda.py  report_generator.py
src/data/: __init__.py  data_loader.py  data_preprocessor.py  reservoir_types.py
src/models/: __init__.py  model_evaluator.py  model_trainer.py
src/utils/: __init__.py  logger.py
src/visualization/: __init__.py  data_visualizer.py  model_visualizer.py
