[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "petroleum_reservoir_analysis"
version = "0.1.0"
description = "Analyse des réservoirs pétroliers"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=0.24.2",
    "matplotlib>=3.4.2",
    "seaborn>=0.11.1",
    "plotly>=5.3.1",
    "jinja2>=3.0.1",
    "scipy>=1.7.0",
    "jupyter>=1.0.0",
    "kaleido>=0.2.1",
    "statsmodels>=0.13.0",
]

[tool.setuptools]
packages = ["data", "visualization", "analysis"]
package-dir = {"" = "src"} 